# a8-bot

./: .gitignore  Cargo.toml  README.md
src/: clap.rs  jupiter.rs  main.rs
