[package]
name = "a8-bot"
version = "0.0.1"
edition = "2021"
authors = ["Jayce"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11.6"
clap = "4.5.28" #A simple to use, efficient, and full-featured Command Line Argument Parser
#reqwest = { version = "0.11.27", features = ["json"] }
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client"}
solana-sdk = "2.0.25"
futures = "0.3.31"