[package]
name = "a8-bot"
version = "0.0.1"
edition = "2021"
authors = ["Jayce"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
backoff = { version = "0.4.0", features = ["tokio"] }
serde_json = "1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11.6"
clap = { version = "4.5.36", features = ["derive"] } #A simple to use, efficient, and full-featured Command Line Argument Parser
#reqwest = { version = "0.11.27", features = ["json"] }
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client", branch = "2.1" }
solana-sdk = "2.1.16"
solana_rbpf = "0.8.1"
yellowstone-grpc-client = "6.0.0"
anyhow = "1.0.97"
bytes = "1.10.1"
futures-util = "0.3.31"
futures = "0.3.24"
#jito-protos= {git = "https://github.com/jito-labs/mev-protos.git", package = "jito-protos"}